# studytrack

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  models.py
app/docs/: API.md  ARCHITECTURE.md  README.md  TESTING.md
app/models/: users.py
app/routes/: auth_routes.py  study_sessions_routes.py  subject_routes.py
app/schemas/: study_sessions_schema.py  subject_schema.py  user_schema.py
app/utils/: cache_utils.py  error_handler.py  middleware.py
tests/: conftest.py  test_auth.py  test_models.py  test_password_utils.py  test_sessions.py  test_subjects.py  test_tokens.py
tests/load/: locustfile.py
